Fixed import issues

--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -4,6 +4,7 @@ import Image from "../../components/Image.astro"
 import Section from "../../components/Section.astro" 
 import SubSection from "../../components/SubSection.astro" 
 import BlueText from "../../components/BlueText.astro" 
+import SubSubSection from "../../components/SubSubSection.astro"
 ---
 <Layout title="Reaction Forces">
 
