--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -49,9 +49,11 @@ In a 2D system, we can write three equilibrium equations (forces in the x and y 
 
 If a 2D system has 3 or less unknown reaction forces, it is considered determinate. If it has more than three unknown reaction forces, it is considered indeterminate.  
 
-<Image src='/Statics/ReactionForcesFigures/DeterminateIndeterminate.PNG' width='8'>Constraints that produce one unknown reaction force.</Image>
+<Image src='/Statics/ReactionForcesFigures/DeterminateIndeterminate.jpg' width='5'>Determinate system with 3 unknowns (left) and indeterminate system with 4 unknowns (right).</Image>
 
 </SubSubSection>
+
+<SubSubSection title="Proper and Improper Constraints" id="proper_constraints">
 
 <SubSubSection title="Stability and Instability" id="stability">
 
