--- a/src/layouts/Layout_index.astro
+++ b/src/layouts/Layout_index.astro
@@ -77,8 +77,22 @@ const pagename = cleaned[1]
 	</body>
 </html>
 <style is:global>
+	@font-face {
+		font-family: 'SourceSansPro';
+		font-style: normal;
+  		font-weight: 400;
+		src: url('/fonts/source-sans-pro/SourceSansPro-Regular.otf');
+	}
+
+	@font-face {
+		font-family: 'SourceSansPro';
+		font-style: bold;
+		font-weight: 700;
+		src: url('/fonts/source-sans-pro/SourceSansPro-Bold.otf');
+	}
+	
 	:root {
-		--illini-orange: #E84A27;
+		--illini-orange: #ff5f05;
 		--illini-blue: #13294B;
 		--accent: 136, 58, 234;
 		--accent-light: 224, 204, 250;
