--- a/src/components/Searchbar.astro
+++ b/src/components/Searchbar.astro
@@ -57,7 +57,7 @@ import search_contents from "../search.json"
     
 </style>
 
-<div id="search-menu" class="position-relative w-100 sticky">    
+<div id="search-menu" class="position-relative w-100 sticky" data-bs-theme="light">    
     <div class="input-group z-1">
       <div class="input-group-prepend">
         <select name="course-selector" id="course-selector" class="form-select">
@@ -2240,7 +2240,7 @@ import search_contents from "../search.json"
     const clear_icon = document.querySelector("#clear");
 
     function resize_icon(){
-      clear_icon.style = `font-size: ${searchbox.clientHeight}px; top: -${searchbox.clientHeight/4-2}px;`;
+      clear_icon.style = `font-size: ${searchbox.clientHeight}px; top: -${searchbox.clientHeight/7-2}px;`;
     }
 
     resize_icon();
