--- a/src/pages/sta/reaction_forces.astro
+++ b/src/pages/sta/reaction_forces.astro
@@ -59,7 +59,7 @@ If a 2D system has 3 or less unknown reaction forces, it is considered determina
 
 A system can be properly or improperly constrained under different loading conditions. 
 
-A system is considered <strong>properly constrained</strong> when there is one single solution to the problem.
+A system is considered <strong>properly constrained</strong> when there is a unique solution to the problem of determining support reactions.
 
 If there are multiple solutions to the problem, then the system is considered <strong>properly constrained with redundancy</strong>. 
 
