--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -17,11 +17,9 @@ import Col from "../../components/Col.astro"
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#assumptions'>Truss Assumptions</a></li> 
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#two_force_member'>Two Force Member</a></li>
-          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#zero_force_member'>Zero Force Member</a></li>
-		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#joints'>Truss Analysis: Joints</a></li>
-		  <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sections'>Truss Analysis: Sections</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#assumptions'>Frames</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#two_force_member'>Machines</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#zero_force_member'>Frame and Machine Analysis</a></li>
       </ul>
       </div>
 <Section title="Frames" id="frames">
