--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -98,7 +98,7 @@ Zero force members are members in a truss structure that experience no force. Th
 	</p>
 
 <p>
-   Drawing free-body diagrams on trusses is simple. As mentioned in the beginning, we will choose the entire truss as our system and draw the free-body diagram to determine the reaction forces on pinned/roller joints. Note we will need more equations and free-body diagrams on individual truss members to fully determine the reaction forces. The following is a diagram showcasing eliminating zero-force members as well as the free-body diagram on the truss.
+   Drawing free-body diagrams on trusses is simple. As mentioned in the beginning, we will choose the entire truss as our system and draw the free-body diagram to determine the reaction forces on pinned/roller joints. Note we will need more equations and free-body diagrams on individual truss members to fully determine the reaction forces. The following is a diagram showcasing eliminating zero-force members.
 	</p>
 
 <PrairieDrawCanvas id="rfb-xzf-f" height="600" width="600">
